--- a/test-workflow.yaml
+++ b/test-workflow.yaml
@@ -1,36 +1,37 @@
-# This is a basic workflow to help you get started with Actions
+name: Build Docker Image with Kaniko
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+env:
+  DOCKER_IMAGE_NAME: my-app
+  DOCKER_REGISTRY: docker.io
+  DOCKER_USERNAME: ssr349@gmail.com
+  DOCKER_PASSWORD: Sagar349
+  
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  build-and-push:
     runs-on: self-hosted
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    permissions:
+      contents: read
+      packages: write
+      
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Set up Docker configuration
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          mkdir -p $HOME/.docker
+          echo "{\"auths\":{\"${{ env.DOCKER_REGISTRY }}\":{\"username\":\"${{ env.DOCKER_USERNAME }}\",\"password\":\"${{ env.DOCKER_PASSWORD }}\"}}}" > $HOME/.docker/config.json
+          
+      - name: Build and Push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_IMAGE_TAG }}
+          builder: gcr.io/kaniko-project/executor:latest
