--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,19 +1,37 @@
-name: Docker Image CI
+name: Build Docker Image with Kaniko
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
+env:
+  DOCKER_IMAGE_NAME: my-app
+  DOCKER_REGISTRY: docker.io
+  DOCKER_USERNAME: ssr349@gmail.com
+  DOCKER_PASSWORD: Sagar349
+  
 jobs:
-
-  build:
-
-    # runs-on: ubuntu-latest
+  build-and-push:
     runs-on: self-hosted
-
+    permissions:
+      contents: read
+      packages: write
+      
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker configuration
+        run: |
+          mkdir -p $HOME/.docker
+          echo "{\"auths\":{\"${{ env.DOCKER_REGISTRY }}\":{\"username\":\"${{ env.DOCKER_USERNAME }}\",\"password\":\"${{ env.DOCKER_PASSWORD }}\"}}}" > $HOME/.docker/config.json
+          
+      - name: Build and Push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_IMAGE_TAG }}
+          builder: gcr.io/kaniko-project/executor:latest
